refactor(tests): Migrate to parameterized tests for improved coverage and maintainability
This commit refactors the unit and integration test suite to leverage JUnit 5's `@ParameterizedTest`. By consolidating repetitive test scenarios into data-driven tests, this update reduces boilerplate code and ensures consistent coverage across various input permutations.

**Key Changes:**

*   **Integration Tests:**
    *   Updated `GameControllerIntegrationTest` to use `@ValueSource` and `@MethodSource` for validating search queries, handling invalid IDs, and applying complex filter objects.
    *   Added a new parameterized test for batch game retrieval (`/games/batch`).
    *   Added `shouldReturn204WhenRemovingFavorite` to `LibraryControllerIntegrationTest` to verify the delete favorite workflow.

*   **Unit Tests:**
    *   **UserService:** Merged separate success and failure tests for registration and login into concise parameterized tests (`registerUser_ShouldHandleAllCases`, `loginUser_ShouldReturnTokenOrEmpty`).
    *   **GameService & PlatformService:** Refactored search, filtering, and retrieval tests to handle both data presence and empty states within single test methods.
    *   **LibraryService:** Extensively refactored logic for upserting games and managing favorites. Complex state transitions (e.g., creating vs. updating vs. deleting entries based on status) are now tested via `Stream<Arguments>`, significantly reducing code duplication.